k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dfmweb
  labels:
    app.kubernetes.io/name: dfmweb
    app.kubernetes.io/part-of: stellantis-overseas-tsp
