k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dfmweb
  namespace: dfmweb
  labels:
    app.kubernetes.io/name: dfmweb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dfmweb
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
